Implement handling of the third argument of cpu_switch(). This unbreaks sparc64 after r202889.

PR:		143215
MFC after:	1 week


git-svn-id: svn+ssh://svn.freebsd.org/base/head@203185 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f